fixed overflow issue

--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -30,7 +30,6 @@ $cardBorderRadius: 10px;
 }
 .project_card {
   height: auto;
-  // background: $accentColorWithBlur;
   min-width: 200px;
   max-width: 32rem;
   align-items: center;
@@ -59,7 +58,6 @@ $cardBorderRadius: 10px;
     clip-path: polygon(101% 0, 100% 0, 110% 100%);
   }
   .project_content {
-    grid-column: 1/12;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -129,7 +127,7 @@ $cardBorderRadius: 10px;
 .project_card:nth-child(odd) {
   & > .project_content {
     align-items: center;
-    grid-column: 1/-1;
+    grid-column: 3/-1;
 
     justify-self: end;
   }
@@ -149,7 +147,7 @@ $cardBorderRadius: 10px;
 
 .project_card:nth-child(even) {
   & > .project_content {
-    grid-column: 1/-1;
+    grid-column: 1/10;
     align-items: center;
     justify-self: start;
   }
